added registration handler
